RGBA images don't blend well in VSE with Cross Effect Strip #38598

Closed
opened 2014-02-11 16:32:55 +01:00 by Bob · 14 comments

W7
9800GT nvidia

blender-2.69-2038eb1-win64

- Use sequencer
- import 2 images (RGB)
- Blend 2 image strips overlapping each other with cross effect strip
- Set blend strip to "alpha over"
  result: so far so good,a nice fade is the result
  do the same process where one or 2 of these images were exported with an alpha channel (RGBA)
  result: instead of fading,the second image pops in at full opacity and then does a bit of opacity changing,but not reliably good.
W7 9800GT nvidia blender-2.69-2038eb1-win64 - Use sequencer - import 2 images (RGB) - Blend 2 image strips overlapping each other with cross effect strip - Set blend strip to "alpha over" ``` result: so far so good,a nice fade is the result ``` ``` do the same process where one or 2 of these images were exported with an alpha channel (RGBA) ``` ``` result: instead of fading,the second image pops in at full opacity and then does a bit of opacity changing,but not reliably good. ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Bollebib

Added subscriber: @Bollebib

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

I am using Blender Git Rev GIT2014-02-12-02-46-43-0e97550
on a Fedora 20 Box 64bit

I tried the instructions mentioned, and it looks like it works for me
but I am not sure.

So I have attached my system-info.txt file,
and a zip file containing the blend file I setup to test,
as well as the 2 png images I used (both have alpha)
made in Gimp.

I also did a screen record to show what I saw in VSE
if I did wrong let me know how to properly test.

system-info.txt

VSEAlphaTest.zip

VSE-Screenrecord.webm

I am using Blender Git Rev GIT2014-02-12-02-46-43-0e97550 on a Fedora 20 Box 64bit I tried the instructions mentioned, and it looks like it works for me but I am not sure. So I have attached my system-info.txt file, and a zip file containing the blend file I setup to test, as well as the 2 png images I used (both have alpha) made in Gimp. I also did a screen record to show what I saw in VSE if I did wrong let me know how to properly test. [system-info.txt](https://archive.blender.org/developer/F76921/system-info.txt) [VSEAlphaTest.zip](https://archive.blender.org/developer/F76922/VSEAlphaTest.zip) [VSE-Screenrecord.webm](https://archive.blender.org/developer/F76923/VSE-Screenrecord.webm)
Author

I looked at your file and at first glance it seems to be correct

I watched it again and now I see an issue with the blend you provided.

Look carefully at the end of the cross effect,it suddenly vanishes without fading

If you would invert the order of the files (Swap Inputs=ALT+S) then the issue would start at the beginning

I have added a few images and cross effect blends to your file to illustrate my point.

The blend all the way to the right is the correct one,it has normal RGB channels only.
All other blend effects are wrong (first frame pops in,or out,or the blend is strange)

VSEAlphaTest.zip

I looked at your file and at first glance it seems to be correct I watched it again and now I see an issue with the blend you provided. Look carefully at the end of the cross effect,it suddenly vanishes without fading If you would invert the order of the files (Swap Inputs=ALT+S) then the issue would start at the beginning I have added a few images and cross effect blends to your file to illustrate my point. The blend all the way to the right is the correct one,it has normal RGB channels only. All other blend effects are wrong (first frame pops in,or out,or the blend is strange) [VSEAlphaTest.zip](https://archive.blender.org/developer/F76938/VSEAlphaTest.zip)
Author

This comment was removed by @Bollebib

*This comment was removed by @Bollebib*

Yes I see what you mean now. Only seem to happen when cross is set to alpha over.

Yes I see what you mean now. Only seem to happen when cross is set to alpha over.

Oops ignore previous post, seems all images have alpha even though i deleted the alpha from gimp before saving. Not sure why.

Oops ignore previous post, seems all images have alpha even though i deleted the alpha from gimp before saving. Not sure why.

Ok definitely positively almost certainly this time the no alpha images actually have no alpha!!!

And I still get the full B image showing up when the cross strip is entered.

CrossFadeWithWithoutAlpha(Corrected).zip

Ok definitely positively almost certainly this time the no alpha images actually have no alpha!!! And I still get the full B image showing up when the cross strip is entered. [CrossFadeWithWithoutAlpha(Corrected).zip](https://archive.blender.org/developer/F76958/CrossFadeWithWithoutAlpha_Corrected_.zip)

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2014-02-12 08:30:20 +01:00

This issue was referenced by blender/blender-addons-contrib@b3bc9e4f77

This issue was referenced by blender/blender-addons-contrib@b3bc9e4f775ed285d1431086c4cb86b3e2a8e0c2

This issue was referenced by b3bc9e4f77

This issue was referenced by b3bc9e4f775ed285d1431086c4cb86b3e2a8e0c2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b3bc9e4f77.

Closed by commit b3bc9e4f77.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38598
No description provided.